--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="col-md-8">
                 <div class="row no-gutters bg-color-name-title">
                     <div class="col heading">
-                        <h1 class="name">Rosie Odenkirk</h1>
+                        <h1 class="name">Andreas Christensen</h1>
                         <h2 class="title"> Full Stack Developer</h2>
                     </div>
                 </div>
@@ -34,7 +34,7 @@
                                 <a href="contact.html" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o" aria-hidden="true"></i><span>Contact</span></a>
                             </li>
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-download menuitem">
-                                <a href="assets/cv/sample-cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download CV</span></a>
+                                <a href="assets/cv/andreas_christensen_cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download CV</span></a>
                             </li>
                         </ul>
                     </div>
@@ -60,7 +60,7 @@
                     </div>
                     <div class="value">
                         <p>
-                            Rosie Odenkirk
+                            Andreas Christensen
                         </p>
                     </div>
                 </div>
@@ -72,7 +72,7 @@
                     </div>
                     <div class="value">
                         <p>
-                            17 Riverdale, Catskills, NY USA
+                            Lyon, France
                         </p>
                     </div>
                 </div>
@@ -84,7 +84,7 @@
                     </div>
                     <div class="value">
                         <p>
-                            555 204 1973
+                            +33 6 09 52 99 08
                         </p>
                     </div>
                 </div>
@@ -96,7 +96,7 @@
                     </div>
                     <div class="value">
                         <p>
-                            rosie.odenkirk@hansaw.com
+                            brogaard89@gmail.com
                         </p>
                     </div>
                 </div>
@@ -116,7 +116,7 @@
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">What do I do?</h4>
                                 <p>
-                                    I'm a skilled Full Stack Developer with a wealth of diverse life and technical experience that I bring to every project.
+                                    I'm an internationally experienced developer-in-training with a positive mindset and wealth of diverse experience that I bring to every job.
                                 </p>
                             </div>
                         </div>
@@ -129,7 +129,7 @@
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">How do I do it?</h4>
                                 <p>
-                                    I follow form as well as function. I know that the aesthetics of effective design combined with application speed, security and reliability combine to create a great user experience.
+                                    I follow form as well as function. I am highly adaptable and cooperative and put whole-hearted effort into the work process. I always want to create great user experiences.
                                 </p>
                             </div>
                         </div>
@@ -142,7 +142,7 @@
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Why hire me?</h4>
                                 <p>
-                                    I work quickly and effectively in getting things built and working across the stack. I'm an excellent communicator who thrives in bright and enthusiastic teams and I'm also a self starter when working solo.
+                                    I work focused and effectively in getting things built and working across the stack. I'm an excellent communicator who thrives in positive and enthusiastic teams and I'm also a self starter when working solo.
                                 </p>
                             </div>
                         </div>
@@ -164,7 +164,7 @@
                 <h5 class="uppercase general-sub">Download</h5>
                 <p class="inline-block">
                     Need a printable version of my CV? Download it here.
-                    <a href="assets/cv/sample-cv.pdf" target="_blank" class="cv-pdf">
+                    <a href="assets/cv/andreas_christensen_cv.pdf" target="_blank" class="cv-pdf">
                         <i class="fa fa-download" aria-hidden="true"></i>
                         <span class="sr-only">Download link.</span>
                     </a>
@@ -175,38 +175,8 @@
                 <ul class="list-inline social-links">
                     <li class="list-inline-item">
                         <a target="_blank" href="#">
-                            <i class="fa fa-facebook" aria-hidden="true"></i>
-                            <span class="sr-only">Facebook</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-twitter" aria-hidden="true"></i>
-                            <span class="sr-only">Twitter</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
                             <i class="fa fa-linkedin" aria-hidden="true"></i>
                             <span class="sr-only">LinkedIn</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-pinterest" aria-hidden="true"></i>
-                            <span class="sr-only">Pinterest</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-instagram" aria-hidden="true"></i>
-                            <span class="sr-only">Instagram</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-youtube" aria-hidden="true"></i>
-                            <span class="sr-only">YouTube</span>
                         </a>
                     </li>
                 </ul>
