--- a/index.html
+++ b/index.html
@@ -183,5 +183,8 @@
             </div>
         </div>
     </footer>
+    <script>
+        var API_KEY = AIzaSyCYcSjOKWz9wLwkqAV2pIBkrFjFsSW88x8;
+    </script>
 </body>
 </html>
