--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text/css" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+        type="text/css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+        type="text/css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css"
+        type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Rosie</title>
 </head>
+
 <body>
     <header>
         <div class="row no-gutters">
@@ -25,16 +30,21 @@
                     <div class="col">
                         <ul id="nav" class="list-inline menucontainer">
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-home menuitem">
-                                <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
+                                <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home"
+                                        aria-hidden="true"></i><span>Home</span></a>
                             </li>
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-resume menuitem">
-                                <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
+                                <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap"
+                                        aria-hidden="true"></i><span>Resume</span></a>
                             </li>
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-contact menuitem">
-                                <a href="contact.html" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o" aria-hidden="true"></i><span>Contact</span></a>
+                                <a href="contact.html" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o"
+                                        aria-hidden="true"></i><span>Contact</span></a>
                             </li>
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-download menuitem">
-                                <a href="assets/cv/andreas_christensen_cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download CV</span></a>
+                                <a href="assets/cv/andreas_christensen_cv.pdf" target="_blank"
+                                    class="hvr-sweep-to-bottom"><i class="fa fa-download"
+                                        aria-hidden="true"></i><span>Download CV</span></a>
                             </li>
                         </ul>
                     </div>
@@ -116,7 +126,8 @@
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">What do I do?</h4>
                                 <p>
-                                    I'm an internationally experienced developer-in-training with a positive mindset and wealth of diverse experience that I bring to every job.
+                                    I'm an internationally experienced developer-in-training with a positive mindset and
+                                    wealth of diverse experience that I bring to every job.
                                 </p>
                             </div>
                         </div>
@@ -129,7 +140,9 @@
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">How do I do it?</h4>
                                 <p>
-                                    I follow form as well as function. I am highly adaptable and cooperative and put whole-hearted effort into the work process. I always want to create great user experiences.
+                                    I follow form as well as function. I am highly adaptable and cooperative and put
+                                    whole-hearted effort into the work process. I always want to create great user
+                                    experiences.
                                 </p>
                             </div>
                         </div>
@@ -142,7 +155,9 @@
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Why hire me?</h4>
                                 <p>
-                                    I work focused and effectively in getting things built and working across the stack. I'm an excellent communicator who thrives in positive and enthusiastic teams and I'm also a self starter when working solo.
+                                    I work focused and effectively in getting things built and working across the stack.
+                                    I'm an excellent communicator who thrives in positive and enthusiastic teams and I'm
+                                    also a self starter when working solo.
                                 </p>
                             </div>
                         </div>
@@ -150,14 +165,15 @@
                 </div>
             </div>
         </div>
-        
+
     </section>
     <footer class="container-fluid">
         <div id="footer-details" class="row">
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">About</h5>
                 <p class="inline-block">
-                    Full Stack Web Developer. Skilled in everything from HTML to Heroku. The capacity for structural and design thinking.
+                    Full Stack Web Developer. Skilled in everything from HTML to Heroku. The capacity for structural and
+                    design thinking.
                 </p>
             </div>
             <div class="col-sm-4">
@@ -183,8 +199,6 @@
             </div>
         </div>
     </footer>
-    <script>
-        var API_KEY = AIzaSyCYcSjOKWz9wLwkqAV2pIBkrFjFsSW88x8;
-    </script>
 </body>
+
 </html>
