--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Rosie</title>
+    <title>Andreas Christensen</title>
 </head>
 <body>
     <header>
@@ -17,30 +17,30 @@
             <div class="col-md-8">
                 <div class="row no-gutters bg-color-name-title">
                     <div class="col heading">
-                        <h1 class="name">Rosie Odenkirk</h1>
+                        <h1 class="name">Andreas Christensen</h1>
                         <h2 class="title"> Full Stack Developer</h2>
                     </div>
                 </div>
                 <div class="row no-gutters">
                     <div class="col">
-                        <ul id="nav" class="list-inline menucontainer">
-                            <li class="col-xs-6 col-sm-2 ui-menu-color-home menuitem">
+                        <ul id="nav" class="list-inline menucontainer row">
+                            <li class="col-6 col-sm-2 ui-menu-color-home menuitem">
                                 <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
                             </li>
-                            <li class="col-xs-6 col-sm-2 ui-menu-color-resume menuitem">
+                            <li class="col-6 col-sm-2 ui-menu-color-resume menuitem">
                                 <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
                             </li>
-                            <li class="col-xs-6 col-sm-2 ui-menu-color-contact menuitem">
-                                <a href="contact.html" class="hvr-sweep-to-bottom"><i class=" fa fa-commenting-o" aria-hidden="true"></i><span>Contact</span></a>
+                            <li class="col-6 col-sm-2 ui-menu-color-contact menuitem">
+                                <a href="contact.html" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o" aria-hidden="true"></i><span>Contact</span></a>
                             </li>
-                            <li class="col-xs-6 col-sm-2 ui-menu-color-interests menuitem">
+                            <li class="col-6 col-sm-2 ui-menu-color-interests menuitem">
                                 <a href="interests.html" class="hvr-sweep-to-bottom"><i class="fa fa-users" aria-hidden="true"></i><span>Interests</span></a>
                             </li>
-                            <li class="col-xs-6 col-sm-2 ui-menu-color-github menuitem">
+                            <li class="col-6 col-sm-2 ui-menu-color-github menuitem">
                                 <a href="github.html" class="hvr-sweep-to-bottom"><i class="fa fa-github" aria-hidden="true"></i><span>GitHub</span></a>
                             </li>
-                            <li class="col-xs-6 col-sm-2 ui-menu-color-download menuitem">
-                                <a href="assets/cv/sample-cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download CV</span></a>
+                            <li class="col-6 col-sm-2 ui-menu-color-download menuitem">
+                                <a href="assets/cv/andreas_christensen_cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download CV</span></a>
                             </li>
                         </ul>
                     </div>
@@ -66,7 +66,7 @@
                     </div>
                     <div class="value">
                         <p>
-                            Rosie Odenkirk
+                            Andreas Christensen
                         </p>
                     </div>
                 </div>
@@ -78,7 +78,7 @@
                     </div>
                     <div class="value">
                         <p>
-                            17 Riverdale, Catskills, NY USA
+                            8 Rue Jacqueline Auriol, 69008 Lyon, France
                         </p>
                     </div>
                 </div>
@@ -90,7 +90,7 @@
                     </div>
                     <div class="value">
                         <p>
-                            555 204 1973
+                            +33 6 09 52 99 08
                         </p>
                     </div>
                 </div>
@@ -102,7 +102,7 @@
                     </div>
                     <div class="value">
                         <p>
-                            rosie.odenkirk@hansaw.com
+                            brogaard89@gmail.com
                         </p>
                     </div>
                 </div>
@@ -170,7 +170,7 @@
                 <h5 class="uppercase general-sub">Download</h5>
                 <p class="inline-block">
                     Need a printable version of my CV? Download it here.
-                    <a href="assets/cv/sample-cv.pdf" target="_blank" class="cv-pdf">
+                    <a href="assets/cv/andreas_christensen_cv.pdf" target="_blank" class="cv-pdf">
                         <i class="fa fa-download" aria-hidden="true"></i>
                         <span class="sr-only">Download link.</span>
                     </a>
